<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/bg_popup_dialog"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/text_reminder"
                android:textColor="@color/app_primary_text"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnDiscard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="@dimen/margin_8dp"
                android:background="@drawable/bg_ripple_with_stroke"
                android:contentDescription="@string/close"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reminder"
                tools:text="for Rafiqul Alam" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="@dimen/margin_8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_header">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:animateLayoutChanges="true"
                android:hint="@string/member_task_reminder_write_txt"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/app_primary_text_place_holder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_goneMarginTop="@dimen/margin_24dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_corner_stroke_et"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:lines="3"
                    android:maxLines="3"
                    android:maxLength="120"
                    android:scrollbars="vertical"
                    android:textIsSelectable="true"
                    android:digits="@string/allowed_digits"
                    android:textSize="@dimen/text_size_primary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/remarks_error_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/member_task_reminder_enter_reminder"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/text_input_comment"
                app:layout_constraintTop_toBottomOf="@+id/text_input_comment"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_comment">

            <ImageView
                android:id="@+id/img_calender"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_12dp"
                android:contentDescription="@string/dummy_description"
                android:elevation="1dp"
                android:padding="@dimen/margin_4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_calender_new"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_date"
                app:layout_constraintEnd_toEndOf="@+id/text_input_date"
                app:layout_constraintTop_toTopOf="@+id/text_input_date" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_date"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:enabled="true"
                android:focusable="false"
                android:hint="@string/date_and_time"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_date"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_rounded_corner_stroke_et"
                    android:enabled="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dateTimeErrorMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:text="@string/member_task_reminder_date_error_txt"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/text_input_date"
                app:layout_constraintTop_toBottomOf="@+id/text_input_date"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_control_btn_container"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_date"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/btn_record_delete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/margin_8dp"
                android:background="@drawable/bg_delete_circle_btn"
                android:contentDescription="@string/member_task_recording_delete"
                android:elevation="@dimen/margin_2dp"
                android:padding="@dimen/margin_2dp"
                android:src="@drawable/ic_voice_note_delete"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/toggle_recording_anim_button"
                app:layout_constraintEnd_toStartOf="@+id/toggle_recording_anim_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toggle_recording_anim_button"
                app:tint="@color/white" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/toggle_recording_anim_button"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="@dimen/margin_2dp"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_date">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_green"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_save"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginTop="@dimen/margin_16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>