<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popup_dialog"
        android:padding="@dimen/margin_16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/cl_reminder_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reminder_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/member_task_reminder_txt"
                android:textColor="@color/app_primary_text"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_reminder_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reminder_title"
                tools:text="for Rafiqul Alam" />

            <ImageButton
                android:id="@+id/btnDiscard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_ripple_with_stroke"
                android:contentDescription="@string/close"
                android:padding="@dimen/margin_8dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="@dimen/margin_4dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_header"
            tools:layout_editor_absoluteX="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reminder_reason_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_4dp"
                android:text="@string/member_task_reminder_field_txt"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reminder_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/appPrimaryText"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_reminder_reason_title"
                app:layout_constraintTop_toTopOf="@+id/tv_reminder_reason_title"
                tools:text="Reminder hjsafgahgfsdhgafgdsafadsfdsafdsafdaajgdafadfdafhjfdadfafdfadfadahjdasfjfjadjfdjdfjfdahjfdhjf" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_marginTop="8dp"
            android:paddingVertical="@dimen/margin_4dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_image_viewer"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_reason"
            tools:layout_editor_absoluteX="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_4dp"
                android:text="@string/member_task_reminder_set_at"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reminder_set_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/appPrimaryText"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_reminder_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_reminder_time"
                app:layout_constraintTop_toTopOf="@+id/tv_reminder_time"
                tools:text="12 Dec 24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_image_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner_stroke_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_time">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/iv_reminder_image_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/width_200dp"
                android:layout_margin="@dimen/margin_8dp"
                android:maxHeight="400dp"
                android:minHeight="300dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_image"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reminder_audio_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_corner_stroke_et"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cl_image_viewer"
            tools:layout_editor_absoluteX="24dp"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <SeekBar
                    android:id="@+id/player_progress_bar"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="@dimen/margin_8dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_8dp"
                android:text="0:00"
                android:textColor="@color/text_color_black"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_progress"
                tools:ignore="RtlSymmetry"
                tools:text="0:00"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_control_btn_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_timer"
                tools:ignore="RtlSymmetry">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/toggle_recording_anim_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:elevation="@dimen/margin_2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_dialog_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:paddingTop="@dimen/margin_8dp"
            android:paddingBottom="@dimen/margin_16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_reminder_audio_player">

            <Button
                android:id="@+id/btnMemberDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_green"
                android:clickable="true"
                android:focusable="true"
                android:text="Member"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
